redireccionamiento login exitoso hacia tabla menu

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -3,6 +3,9 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">BIENVENIDO AL MENU  DIGITAL DE FAST FU</h1>
+    
+    <li class="nav-item">
+        <a class="nav-link text-dark" asp-area="" asp-controller="Productoes" asp-action="InicializarProductos">VER MENU</a>
+    </li>
 </div>
