--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - apprueba</title>
+    <title>@ViewData["Title"] -fasfu</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/apprueba.styles.css" asp-append-version="true" />
@@ -25,13 +25,13 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li> *@
-                        <li class="nav-item">
+                       @*  <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Productoes" asp-action="InicializarProductos">VER MENU</a>
-                        </li>
+                        </li> *@
                     </ul>
                 </div>
-                <partial name="_LoginPartial" />
-            </div>
+               <partial name="_LoginPartial" />
+            </div>  
         </nav>
         
     </header>
