--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -12,7 +12,11 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">apprueba</a>
+             @*    imagen *@
+                <a href="https://shorturl.at/bfkwP">
+                <img src="https://shorturl.at/bfkwP" alt="Logo de La Linea" width="50" height="50">
+                </a> 
+                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">      FAST FU</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
