--- a/Views/Home/Privacy.cshtml
+++ b/Views/Home/Privacy.cshtml
@@ -3,7 +3,9 @@
 }
 <h1>@ViewData["Title"]</h1>
 
-
+<li class="nav-item">
+    <a class="nav-link text-dark" asp-area="" asp-controller="Ordens" asp-action="Iniciar">VER MENU</a>
+</li>
            
 
 <p>Use this page to detail your site's privacy policy.</p>
