--- a/Views/Ordens/Edit.cshtml
+++ b/Views/Ordens/Edit.cshtml
@@ -11,25 +11,25 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Edit">
+        <form asp-action="Edit" onsubmit="mostrarNotificacion()">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
             <div class="form-group">
                 <label asp-for="Nombre" class="control-label"></label>
-                <input asp-for="Nombre" class="form-control" />
+                <input asp-for="Nombre" class="form-control" readonly />
                 <span asp-validation-for="Nombre" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Precio" class="control-label"></label>
-                <input asp-for="Precio" class="form-control" />
+                <input asp-for="Precio" class="form-control" readonly />
                 <span asp-validation-for="Precio" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Imagen" class="control-label"></label>
-                <input asp-for="Imagen" class="form-control" />
-
+                <label asp-for="Imagen" class="control-label"></label><br>
+                 <input asp-for="Imagen" class="form-control" readonly /> 
+                
                 <td> <img src="@Model.Imagen" /></td>
-
+                
                 <span asp-validation-for="Imagen" class="text-danger"></span>
             </div>
             <div class="form-group form-check">
@@ -47,6 +47,7 @@
                     <input class="form-check-input" asp-for="PapasExtra" /> @Html.DisplayNameFor(model => model.PapasExtra)
                 </label>
             </div>
+
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
@@ -55,9 +56,23 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Volver</a>
 </div>
 
 @section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    <script>
+        // Agrega este código dentro de la sección Scripts
+
+        // Función para mostrar una notificación SweetAlert
+        function mostrarNotificacion() {
+            Swal.fire({
+                icon: 'success', // Puedes cambiar el icono
+                title: 'Éxito',
+                text: 'Tu orden ha sido procesada con éxito.',
+            });
+        }
+    </script>
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
 }
