--- a/Views/Ordens/Index.cshtml
+++ b/Views/Ordens/Index.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Index</h1>
+<h1>Menu</h1>
 
 <p>
     <a asp-action="Create">Create New</a>
@@ -22,46 +22,48 @@
             <th>
                 @Html.DisplayNameFor(model => model.Imagen)
             </th>
-            <th>
-                @Html.DisplayNameFor(model => model.ConSalsa)
+            @* <th>
+            @Html.DisplayNameFor(model => model.ConSalsa)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.ConEnsalada)
+            @Html.DisplayNameFor(model => model.ConEnsalada)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.PapasExtra)
-            </th>
+            @Html.DisplayNameFor(model => model.PapasExtra)
+            </th> *@
             <th></th>
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Nombre)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Precio)
-            </td>
-           @*  <td>
-                @Html.DisplayFor(modelItem => item.Imagen)
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Nombre)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Precio)
+                </td>
+                @*  <td>
+            @Html.DisplayFor(modelItem => item.Imagen)
             </td> *@
                 <td> <img src="@item.Imagen" /></td>
-            <td>
-                @Html.DisplayFor(modelItem => item.ConSalsa)
+                @*  <td>
+            @Html.DisplayFor(modelItem => item.ConSalsa)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.ConEnsalada)
+            @Html.DisplayFor(modelItem => item.ConEnsalada)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.PapasExtra)
-            </td>
-            <td>
-                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-@*                  <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
- *@@*                 <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
- *@            </td>
-        </tr>
-}
+            @Html.DisplayFor(modelItem => item.PapasExtra)
+            </td> *@
+                <td>
+                    <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
+                    @*                  <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
+                *@@*                 <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                *@
+                </td>
+            </tr>
+        }
     </tbody>
 </table>
