--- a/Views/Home/Privacy.cshtml
+++ b/Views/Home/Privacy.cshtml
@@ -1,11 +1,25 @@
 ﻿@{
-    ViewData["Title"] = "Privacy Policy";
+    ViewData["Title"] = "BIENVENIDO AL MENU DIGITAL DE FAST FU";
 }
-<h1>@ViewData["Title"]</h1>
 
-<li class="nav-item">
-    <a class="nav-link text-dark" asp-area="" asp-controller="Ordens" asp-action="Iniciar">VER MENU</a>
-</li>
-           
+<!DOCTYPE html>
+<html>
+<head>
+    <title>@ViewData["Title"]</title>
+</head>
+<body>
+    <div class="container">
+        <h1 class="text-center">@ViewData["Title"]</h1>
 
-<p>Use this page to detail your site's privacy policy.</p>
+        <ul class="nav justify-content-center">
+            <li class="nav-item">
+                <a class="nav-link text-dark" asp-area="" asp-controller="Ordens" asp-action="Iniciar">VER MENU</a>
+                <br>
+                <a href="https://img.freepik.com/foto-gratis/vista-superior-arreglo-comida-sobre-fondo-madera_23-2148308806.jpg?w=1480&t=st=1699238384~exp=1699238984~hmac=95b6afed7f3e2b6ce317d4ef29b54082e2af8e897bdac47f9eb60c205e24c1c5">
+                    <img src="https://img.freepik.com/foto-gratis/vista-superior-arreglo-comida-sobre-fondo-madera_23-2148308806.jpg?w=1480&t=st=1699238384~exp=1699238984~hmac=95b6afed7f3e2b6ce317d4ef29b54082e2af8e897bdac47f9eb60c205e24c1c5" alt="Imagen de comida" width="500" height="400">
+                </a>
+            </li>
+        </ul>
+    </div>
+</body>
+</html>
