--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -8,17 +8,16 @@
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/apprueba.styles.css" asp-append-version="true" />
 
-
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+            <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-custom border-bottom box-shadow mb-3">
             <div class="container-fluid">
              @*    imagen *@
                 <a href="https://shorturl.at/bfkwP">
                 <img src="https://shorturl.at/bfkwP" alt="Logo de La Linea" width="50" height="50">
                 </a> 
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">      FAST FU</a>
+                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index" style="color:white">FAST FU | MENU ELECTRONICO</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -36,7 +35,7 @@
                         </li> *@
                     </ul>
                 </div>
-               <partial name="_LoginPartial" />
+               <partial name="_LoginPartial"/>
             </div>  
         </nav>
         
