--- a/Views/Ordens/Index.cshtml
+++ b/Views/Ordens/Index.cshtml
@@ -7,63 +7,29 @@
 
 <h1>Menu</h1>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Nombre)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Precio)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Imagen)
-            </th>
-            @* <th>
-            @Html.DisplayNameFor(model => model.ConSalsa)
-            </th>
-            <th>
-            @Html.DisplayNameFor(model => model.ConEnsalada)
-            </th>
-            <th>
-            @Html.DisplayNameFor(model => model.PapasExtra)
-            </th> *@
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var item in Model)
-        {
-            <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Nombre)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Precio)
-                </td>
-                @*  <td>
-            @Html.DisplayFor(modelItem => item.Imagen)
-            </td> *@
-                <td> <img src="@item.Imagen" /></td>
-                @*  <td>
-            @Html.DisplayFor(modelItem => item.ConSalsa)
-            </td>
-            <td>
-            @Html.DisplayFor(modelItem => item.ConEnsalada)
-            </td>
-            <td>
-            @Html.DisplayFor(modelItem => item.PapasExtra)
-            </td> *@
-                <td>
-                    <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                    @*                  <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                *@@*                 <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-                *@
-                </td>
-            </tr>
-        }
-    </tbody>
-</table>
+<div class="row">
+    @foreach (var item in Model)
+    {
+        <div class="col-md-3">
+            <div class="card border-danger mb-3">
+                <div class="card-header">@Html.DisplayFor(modelItem => item.Nombre)</div>
+                <div class="card-body">
+
+                    <img src="@item.Imagen" class="img-fluid" alt="Product Image">
+                </div>
+                <div class="card-footer">
+                    <!-- Puedes agregar enlaces o botones aquí si es necesario -->
+                    <p class="card-text">$@Html.DisplayFor(modelItem => item.Precio).00</p>
+                    <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-danger">Ordenar</a>
+                    
+                </div>
+            </div>
+
+        </div>
+    }
+</div>
+
+@* <td>
+    <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
+ 
+</td> *@
